--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Django==1.7.7
-Unipath==1.1
+Django==1.8
+httplib2==0.9
+Pillow==2.8.1
 psycopg2==2.6
+pytz==2015.2
+six==1.9.0
+twilio==3.8.0
+Unipath==1.1
