--- a/sgim/static/bower/bower.json
+++ b/sgim/static/bower/bower.json
@@ -18,28 +18,12 @@
     "tests"
   ],
   "dependencies": {
-    "core-toolbar": "Polymer/core-toolbar#^0.5",
-    "paper-icon-button": "Polymer/paper-icon-button#^0.5",
-    "core-icon-button": "Polymer/core-icon-button#^0.5.0",
-    "font-roboto": "Polymer/font-roboto#^0.5.0",
-    "core-header-panel": "Polymer/core-header-panel#^0.5.0",
-    "paper-tabs": "Polymer/paper-tabs#^0.5.0",
-    "core-drawer-panel": "Polymer/core-drawer-panel#^0.5",
-    "core-animated-pages": "Polymer/core-animated-pages#^0.5",
-    "core-item": "Polymer/core-item#^0.5",
-    "core-menu": "Polymer/core-menu#^0.5",
-    "core-tooltip": "Polymer/core-tooltip#^0.5",
-    "paper-ripple": "Polymer/paper-ripple#^0.5",
-    "paper-button": "Polymer/paper-button#^0.5",
-    "bower": "*",
-    "install": "~1.0.4",
-    "ajax-form": "~1.6.0",
-    "paper-toast": "Polymer/paper-toast#^0.5",
-    "paper-dialog": "Polymer/paper-dialog#^0.5",
     "jquery": "~2.1.3",
-    "paper-menu-button": "Polymer/paper-menu-button#^0.5",
-    "paper-dropdown": "Polymer/paper-dropdown#^0.5",
-    "paper-item": "Polymer/paper-item#^0.5",
-    "semantic-ui": "~1.11.6"
+    "semantic-ui": "~1.11.6",
+    "polymer": "~0.5.0",
+    "uikit": "~2.18.0",
+    "bootstrap": "~3.3.4",
+    "bootstrap-material-design": "~0.3.0",
+    "w2ui": "~1.4.2"
   }
 }
