--- a/sgim/static/bower/bower.json
+++ b/sgim/static/bower/bower.json
@@ -24,6 +24,7 @@
     "uikit": "~2.18.0",
     "bootstrap": "~3.3.4",
     "bootstrap-material-design": "~0.3.0",
-    "w2ui": "~1.4.2"
+    "w2ui": "~1.4.2",
+    "jqwidgets": "*"
   }
 }
