--- a/sgim/static/bower/bower.json
+++ b/sgim/static/bower/bower.json
@@ -20,14 +20,10 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "semantic-ui": "~1.11.6",
-    "uikit": "~2.18.0",
     "bootstrap": "~3.3.4",
     "bootstrap-material-design": "~0.3.0",
-    "w2ui": "~1.4.2",
     "jqwidgets": "*",
     "jquery-cookie": "~1.4.1",
-    "snackbarjs": "~1.0.0",
-    "polymer": "Polymer/polymer#~0.5.5",
-    "paper-progress": "Polymer/paper-progress#~0.5.5"
+    "snackbarjs": "~1.0.0"
   }
 }
