--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ Django==1.7.7
 Pillow==2.8.1
 Unipath==1.1
 django-filter==0.9.2
+django-mockups==0.4.8
 django-suit==0.2.12
 djangorestframework==3.1.1
+html5lib==0.99999
 httplib2==0.9
+pisa==3.0.33
 psycopg2==2.6
 pytz==2015.2
+reportlab==3.1.44
 six==1.9.0
 twilio==3.8.0
