--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.7.7
 Pillow==2.8.1
+PyPDF2==1.24
 Unipath==1.1
 django-filter==0.9.2
 django-mockups==0.4.8
@@ -13,3 +14,4 @@ pytz==2015.2
 reportlab==3.1.44
 six==1.9.0
 twilio==3.8.0
+xhtml2pdf==0.0.6
