--- a/sgim/static/bower/bower.json
+++ b/sgim/static/bower/bower.json
@@ -24,6 +24,7 @@
     "bootstrap-material-design": "~0.3.0",
     "jqwidgets": "*",
     "jquery-cookie": "~1.4.1",
-    "snackbarjs": "~1.0.0"
+    "snackbarjs": "~1.0.0",
+    "ckeditor": "~4.4.7"
   }
 }
