--- a/sgim/static/bower/bower.json
+++ b/sgim/static/bower/bower.json
@@ -26,6 +26,7 @@
     "jquery-cookie": "~1.4.1",
     "snackbarjs": "~1.0.0",
     "ckeditor": "~4.4.7",
-    "moment": "~2.10.2"
+    "moment": "~2.10.2",
+    "circliful": "~0.1.5"
   }
 }
