--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 Django==1.7.7
-Pillow==2.8.1
-PyPDF2==1.24
-Unipath==1.1
+django-braces==1.8.0
 django-filter==0.9.2
 django-mockups==0.4.8
 django-suit==0.2.12
 djangorestframework==3.1.1
+djrill==1.4.0
 html5lib==0.99999
 httplib2==0.9
+Pillow==2.8.1
 pisa==3.0.33
 psycopg2==2.6
+PyPDF2==1.24
 pytz==2015.2
 reportlab==3.1.44
+requests==2.7.0
 six==1.9.0
 twilio==3.8.0
+Unipath==1.1
 xhtml2pdf==0.0.6
