--- a/sgim/static/bower/bower.json
+++ b/sgim/static/bower/bower.json
@@ -27,6 +27,7 @@
     "snackbarjs": "~1.0.0",
     "ckeditor": "~4.4.7",
     "moment": "~2.10.2",
-    "circliful": "~0.1.5"
+    "circliful": "~0.1.5",
+    "kc_fab": "*"
   }
 }
